# PSI-Numerical-Methods-2026-Optimization

./: .gitignore  README.md  pyproject.toml
build_tools/: setuptools_wrapper.py
scripts/: nbody_basic.py  nbody_cext.py  nbody_numpy.py  nbody_output.py  nbody_transpose.py  plot.py
src/: Makefile  cbodymodule.c  mycalc.c  mycalc.h  omp_test.c  test_main.c
